@@ -1,4 +1,6 @@
 2023-02-05 0.22f
+  * fixed error message: no space left on device
+  * bar-index: fixed remove duplicate storges
   * BARControl: fixed edit serve maintenance time (locale)
   * BARControl: fixed update file lists
 
